# klar

./: .gitignore  README.md  build.sh  cspell.json  if.tl  if_else.tl  if_else_nested.tl  interpreter.py  klar_language_specification.md  loop.tl  multiple_function_calls.tl  parser.tl  read_from_stdin.tl  simple.ir  simple.tl  string_concatenate.tl  string_delimiter.tl  string_escape_sequence.tl  variables.tl
bootstrap/: build.sh
bootstrap/stage0/: README.md  interpreter.py  test.sh
bootstrap/stage1/: build_compiler.sh  compiler.tl  test.sh
bootstrap/stage2/: build_compiler.sh  compiler.tl  test.sh
bootstrap/stage3/: compiler.tl  test.sh
bootstrap/stage4/: compile.sh  compiler.tl  test.sh
bootstrap/stage5/: compiler.tl
bootstrap/stage6/: build_compiler.sh  compile.sh  compiler.tl
bootstrap/stage7/: build_compiler.sh  compiler.tl
bootstrap/stage8/: compiler.tl  test.sh
bootstrap/tests/: if.out  if_else.tl  if_else_nested.tl  loop.out  loop.tl  multiple_function_calls.tl  read_from_stdin.out  string_escape_sequence.tl
bootstrap1/: test.sh
bootstrap1/stage0/: tokenized_interpreter.py
bootstrap1/stage1/: build_compiler.sh  compiler.tl
bootstrap1/stage2/: compiler.tl
bootstrap1/stage4/: compile.sh  (+1 more)
bootstrap3/: build.sh  language_design.kl
bootstrap3/stage0/: Cargo.toml  build_compiler.sh
bootstrap3/stage0/src/: ast.rs  codegen.rs  lexer.rs  lib.rs  main.rs  transform_ast.rs
bootstrap4/: the_book.md  the_book_epilogue_js.js  the_book_prelude_js.js  the_book_prelude_js.kl  the_book_use_example.kl
docs/: the_book.md  the_book_use_example.kl
(+159 files in other folders)
