[package]
name = "stage0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backtrace-on-stack-overflow = "0.3.0"
strum = "0.25.0"
strum_macros = "0.25.1"

[dev-dependencies]
pretty_assertions = "1.4.0"
